# Asteroids

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  unix_quick_build.sh
game/: README.txt.txt  archetypeSerialization.ftxt  log.ftxt  worldEcs.json
src/: CMakeLists.txt  base.hpp  component.hpp  entity.hpp  game.cpp  game.hpp  global.cpp  global.hpp  main.cpp  network.hpp  physics.hpp  physicsEcs.hpp  state.hpp  states.hpp  statesDefine.cpp  statesDefine.hpp  ui.hpp
